Fix tabela de compras com text-align

--- a/modulo2/Semana08/css-bugfixes/index.css
+++ b/modulo2/Semana08/css-bugfixes/index.css
@@ -8,6 +8,7 @@
     margin: 0;
     padding: 0;
     font-family: Roboto;
+    text-align: -webkit-center;
 }
 
 h2 {
@@ -130,6 +131,7 @@ td button:hover {
     background-color: white;
     width: 100px;
     height: 20px;
+    margin-top: 80px;
     border: 1px solid black;
     border-radius: 5px;
     font-size: 10px;
